style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.container {
    display: grid;
    grid-template-columns: 1fr 3fr 1fr;
    gap: 20px;

    padding: 1rem;
}

/* Header section */
header {
    grid-column: 2 / 4;

    display: flex;
    flex-direction: column;
    gap: 1rem;

    border: 1px solid red;

    padding: 1rem 2rem;
}
.header-top,
.header-bottom {
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.user-menu,
.header-bottom > .user-info {
    display: flex;
    align-items: center;
    gap: 1rem;
}
.header-top > .search {
    display: flex;
    align-items: center;
    gap: 1rem;
}
input {
    padding: 0.8rem;
    width: 500px;
}
.actions button {
    padding: 0.5rem 0.8rem;
}

/* Sidebar section */
.sidebar {
    grid-row: 1 / 4;

    border: 1px solid red;
}

/* Main section */
main {
    border: 1 px solid red;
}

/* Aside card section */
.cards-aside {
    border: 1px solid red;
}

